# tokentrader

./: .gitignore  README.md  pyproject.toml  start.bat  stop.bat
docs/: API_design_clawdsourcing_zh.md  DB_entities_clawdsourcing_zh.md  PRD_clawdsourcing_agent_marketplace_zh.md  mana-native-hub.md  token-exchange-design.md
scripts/: server_control.py
src/tokentrader/: __init__.py  engine.py  main.py  models.py  server.py  service.py
src/tokentrader/web/: app.html  app.js  index.html  landing.js  styles.css
tests/: test_engine.py  test_service.py
