[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokentrader"
version = "0.1.0"
description = "Token exchange and task routing prototype for multi-LLM subscriptions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[project.scripts]
tokentrader-web = "tokentrader.server:run_server"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
